<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.teffcode.mislugares.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nombre_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_text"/>
        <EditText
            android:id="@+id/nombre_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/nombre_edit"
            android:layout_below="@+id/nombre_text"/>
        <TextView
            android:id="@+id/tipo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_text"
            android:layout_below="@id/nombre_edit"/>
        <Spinner
            android:id="@+id/tipo_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tipo_text"
            android:layout_toRightOf="@id/tipo_text"/>
        <TextView
            android:id="@+id/direccion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion_text"
            android:layout_below="@id/tipo_spinner"/>
        <EditText
            android:id="@+id/direccion_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPostalAddress"
            android:hint="@string/direccion_edit"
            android:layout_below="@+id/direccion_text"/>
        <TextView
            android:id="@+id/telefono_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_text"
            android:layout_below="@id/direccion_edit"/>
        <EditText
            android:id="@+id/telefono_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_edit"
            android:layout_toRightOf="@+id/telefono_text"
            android:layout_alignTop="@id/telefono_text"
            android:inputType="phone"/>
        <TextView
            android:id="@+id/url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_text"
            android:layout_below="@id/telefono_edit"
            android:inputType="textUri"/>
        <EditText
            android:id="@+id/url_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/url_edit"
            android:layout_below="@+id/url_text"/>
        <TextView
            android:id="@+id/comentario_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentario_text"
            android:layout_below="@id/url_edit"/>
        <EditText
            android:id="@+id/comentario_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/comentario_edit"
            android:layout_below="@+id/comentario_text"/>


    </RelativeLayout>
</ScrollView>
